<?xml version="1.0"?>
<package format="2">
  <name>patrol_mode</name>
  <version>0.0.0</version>

  <description>The patrol_mode package
  2019~2020 Capstone design Autonomous driving robot Project
  </description>

  <maintainer email="sdljs74750@gmail.com">Jinsung Lee</maintainer>
  <author>Jinsung Lee</author>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
